<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_second"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/display_score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/score_text_innit"
        android:textColor="#EAE6E6"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView_timer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:layout_toStartOf="@+id/display_score1"
        android:layout_toLeftOf="@+id/display_score1"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#F8F6F6"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_identify_car_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_timer1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="@font/alegreya_sans_sc"
        android:gravity="center"
        android:text="@string/identify_the_car_make_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F8F6F6"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_carmake"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/textView_identify_car_make"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/random_car_make"
        app:srcCompat="@drawable/audi1" />

    <Spinner
        android:id="@+id/label_spinner_carmake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_carmake"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:background="#E4FFFFFF"
        android:saveEnabled="true" />

    <Button
        android:id="@+id/button_identify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_spinner_carmake"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="buttonAction"
        android:text="@string/identify_button_label"
        android:textColor="#EAE6E6"
        android:textSize="22sp"
        app:backgroundTint="#004953"
        app:rippleColor="#C389DAD1" />


    <TextView
        android:id="@+id/display_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_identify"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/display_correct_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_result"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:textColor="#FCDF03"
        android:textSize="22sp" />


</RelativeLayout>